Updated build with no errors

--- a/ExerciseXData/appsettings.json
+++ b/ExerciseXData/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True;"
+    "DefaultConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True;",
+    "AlternateConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseXData; Trusted_Connection = True;"
   }
 }
