--- a/ExerciseXData/appsettings.json
+++ b/ExerciseXData/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True;",
-    "AlternateConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseXData; Trusted_Connection = True;"
+    "DefaultConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseXData; Trusted_Connection = True;",
+
+    "AlternateConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True;"
   }
 }
