added authentication code (not tested) added Role to user table

--- a/ExerciseXData/ExerciseXData.csproj
+++ b/ExerciseXData/ExerciseXData.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXDataLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\DietsFoods\" />
+    <Folder Include="Views\UsersExercises\" />
+    <Folder Include="Views\UsersDiets\" />
+  </ItemGroup>
+
 </Project>
