--- a/ExerciseXDataApi/appsettings.json
+++ b/ExerciseXDataApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseXData; Trusted_Connection = True;",
+
+    "AlternateConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True;"
+  }
 }
