Currently making the link to normal user dashboard

--- a/ExerciseXData/ExerciseXData.csproj
+++ b/ExerciseXData/ExerciseXData.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXDataLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Users\" />
+  </ItemGroup>
+
 </Project>
