added migration for UserDbContext, currently working on register/login/logout

--- a/ExerciseXData/ExerciseXData.csproj
+++ b/ExerciseXData/ExerciseXData.csproj
@@ -30,4 +30,12 @@
     <ProjectReference Include="..\ExerciseXData_DietLibrary\ExerciseXData_DietLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Account\" />
+    <Folder Include="Views\Exercises\" />
+    <Folder Include="Views\Foods\" />
+    <Folder Include="Views\Diets\" />
+    <Folder Include="Views\Users\" />
+  </ItemGroup>
+
 </Project>
