fixing the reference for user service

--- a/ExerciseXData_DietLibrary/ExerciseXData_DietLibrary.csproj
+++ b/ExerciseXData_DietLibrary/ExerciseXData_DietLibrary.csproj
@@ -24,5 +24,6 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXData_UserLibrary.csproj" />
+	  <ProjectReference Include="..\ExerciseXData_SharedContracts\ExerciseXData_SharedContracts.csproj" />
 	</ItemGroup>
 </Project>
