--- a/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
+++ b/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
@@ -26,5 +26,6 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXData_UserLibrary.csproj" />
+	  <ProjectReference Include="..\ExerciseXData_SharedContracts\ExerciseXData_SharedContracts.csproj" />
 	</ItemGroup>
 </Project>
