successfully seeded data for exercise, food, and diets

--- a/ExerciseXDataLibrary/ExerciseXData_UserLibrary.csproj
+++ b/ExerciseXDataLibrary/ExerciseXData_UserLibrary.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ExerciseXData_SharedContracts\ExerciseXData_SharedContracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
