--- a/ExerciseXData/ExerciseXData.csproj
+++ b/ExerciseXData/ExerciseXData.csproj
@@ -34,6 +34,9 @@
     <Folder Include="Views\Exercises\" />
     <Folder Include="Views\Foods\" />
     <Folder Include="Views\Diets\" />
+    <Folder Include="Views\Diets\" />
+    <Folder Include="Views\Exercises\" />
+    <Folder Include="Views\Foods\" />
   </ItemGroup>
 
 </Project>
