--- a/ExerciseXData/appsettings.json
+++ b/ExerciseXData/appsettings.json
@@ -10,6 +10,7 @@
     "UserConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = UserDb; Trusted_Connection = True; TrustServerCertificate=True",
     "ExerciseConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseDb; Trusted_Connection = True; TrustServerCertificate=True",
     "DietConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = DietDb; Trusted_Connection = True; TrustServerCertificate=True",
+    "SharedConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = SharedDb; Trusted_Connection = True; TrustServerCertificate=True",
 
     "AlternateConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True; TrustServerCertificate=True"
   }
