Adjusted models, views remain unchanged

--- a/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
+++ b/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
@@ -23,4 +23,10 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
 	</ItemGroup>
+
+
+	<ItemGroup>
+	  <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXData_UserLibrary.csproj" />
+	  <ProjectReference Include="..\SharedClassLibrary\ExerciseXData_SharedLibrary.csproj" />
+	</ItemGroup>
 </Project>
