--- a/ExerciseXData_DietLibrary/ExerciseXData_DietLibrary.csproj
+++ b/ExerciseXData_DietLibrary/ExerciseXData_DietLibrary.csproj
@@ -21,4 +21,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXData_UserLibrary.csproj" />
+	</ItemGroup>
 </Project>
