updated program class for admin seeding data

--- a/ExerciseXData/appsettings.json
+++ b/ExerciseXData/appsettings.json
@@ -13,5 +13,10 @@
     "SharedConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = SharedDb; Trusted_Connection = True; TrustServerCertificate=True",
 
     "AlternateConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True; TrustServerCertificate=True"
+  },
+
+  "AdminSettings": {
+    "AdminEmail": "admin@example.com",
+    "AdminPassword": "Admin@12345"
   }
 }
