Rearrange files to their respective library

--- a/SharedClassLibrary/ExerciseXData_SharedLibrary.csproj
+++ b/SharedClassLibrary/ExerciseXData_SharedLibrary.csproj
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DataTransferObject\" />
     <Folder Include="Interface\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
