temporary commented unused fields on all libraries

--- a/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
+++ b/EXD_ExerciseLibrary/ExerciseXData_ExerciseLibrary.csproj
@@ -26,6 +26,7 @@
 
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ExerciseXDataLibrary\ExerciseXData_UserLibrary.csproj" />
 	  <ProjectReference Include="..\SharedClassLibrary\ExerciseXData_SharedLibrary.csproj" />
 	</ItemGroup>
 </Project>
