UsersDiets CRUD views works currently

--- a/ExerciseXData/appsettings.json
+++ b/ExerciseXData/appsettings.json
@@ -7,10 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = UserDb; Trusted_Connection = True; TrustServerCertificate=True",
-    "ExerciseConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseDb; Trusted_Connection = True; TrustServerCertificate=True",
-    "DietConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = DietDb; Trusted_Connection = True; TrustServerCertificate=True",
-    "SharedConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = SharedDb; Trusted_Connection = True; TrustServerCertificate=True",
+    //"UserConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = UserDb; Trusted_Connection = True; TrustServerCertificate=True",
+    //"ExerciseConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = ExerciseDb; Trusted_Connection = True; TrustServerCertificate=True",
+    //"DietConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = DietDb; Trusted_Connection = True; TrustServerCertificate=True",
+    //"SharedConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = SharedDb; Trusted_Connection = True; TrustServerCertificate=True",
+
+    "TestUserConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = TestUserDb; Trusted_Connection = True; TrustServerCertificate=True",
+    "TestExerciseConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = TestExerciseDb; Trusted_Connection = True; TrustServerCertificate=True",
+    "TestDietConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = TestDietDb; Trusted_Connection = True; TrustServerCertificate=True",
+    "TestSharedConnection": "Server = DESKTOP-0FPENKR\\SQLEXPRESS; Database = TestSharedDb; Trusted_Connection = True; TrustServerCertificate=True",
 
     "AlternateConnection": "Server = DESKTOP-M10V720\\MSSQLSERVER01; Database = ExerciseXData; Trusted_Connection = True; TrustServerCertificate=True"
   }
